Docker improvements and os setup (#49)
* docker: Reworked dockerization #14

* scripts: Added setup scripts for linux, windows and macOS (WIP) #17

* chore: Modified Makefile and README #30

* docs: Modified swagger-documentation #17
