# docs/swagger.json
@@ -338,6 +338,38 @@
                     }
                 }
             }
+        },
+        "/forsete-atr/v1/status/": {
+            "get": {
+                "description": "Retrieve status of service",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Status"
+                ],
+                "summary": "GetStatus",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.Status"
+                        }
+                    }
+                }
+            },
+            "head": {
+                "description": "Retrieve status of service",
+                "tags": [
+                    "Status"
+                ],
+                "summary": "HeadStatus",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -455,6 +487,18 @@
                 "text_recognition_models": {
                     "type": "array",
                     "items": {}
+                }
+            }
+        },
+        "handler.Status": {
+            "description": "Json-response for Status",
+            "type": "object",
+            "properties": {
+                "uptime": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
                 }
             }
         },
